--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+requests = "^2.32.3"
+pandas = "^2.2.2"
+matplotlib = "^3.9.2"
 
 
 [build-system]
